--- a/hw3/styles.css
+++ b/hw3/styles.css
@@ -1,1 +1,34 @@
 /* Add your code here */
+.nav-link {
+  color: red;
+}
+
+#welcome img {
+  border-radius: 50%;
+}
+
+#form-container h2 {
+  text-align: center !important;
+  font-weight: bold;
+}
+
+#form-container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+#form-container h2 {
+  text-align: right;
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+#form-text {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: 2rem 0;
+}
+
+#form {
+  margin: 4rem 0;
+}
